syntax = "proto3";

package sum;

option java_package = "com.saikat.sum";
option java_multiple_files = true;

message SumMessage{
    int32 firstNum=1;
    int32 secondNum=2;
}

message SumRequest{
    SumMessage sumMessage=1;
}

message SumResponse{
    int32 result=1;
}

service SumService{
    rpc Sum (SumRequest) returns (SumResponse) {};
}








